<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/navbar_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_products_categories"
        android:icon="@drawable/navbar_products"
        android:title="@string/title_Products" />

    <item
        android:id="@+id/navigation_orders_enquiries"
        android:icon="@drawable/navbar_orders_enquiries"
        android:title="@string/title_OrdersEnquiries" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/navbar_notification"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/navbar_dashboard"
        android:title="@string/title_dashboard" />




</menu>