<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/iphone_12_pro_max__10"
    tools:context="com.marquedo.marquedo.main_2.MainActivity">

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="217dp"
        android:layout_height="111dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038"
        app:srcCompat="@drawable/final_logo_horizontal"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/make_selling_easy_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_selling_easy"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/with_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/with_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/with"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/make_selling_easy_textView"
        app:layout_constraintEnd_toStartOf="@id/marquedo_textView"
        app:layout_constraintStart_toStartOf="@id/make_selling_easy_textView" />

    <TextView
        android:id="@+id/marquedo_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marquedo"
        android:textColor="@color/yellow"
        android:textSize="34sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/make_selling_easy_textView"
        app:layout_constraintStart_toEndOf="@id/with_textView"
        app:layout_constraintTop_toBottomOf="@+id/make_selling_easy_textView" />

    <TextView
        android:id="@+id/manage_sell_products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_and_sell_the_products_in_n_your_store_at_your_convenience"
        android:textColor="@color/grey"
        android:textSize="20sp"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/main_lets_get_started_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marquedo_textView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_lets_get_started_button"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:text="@string/let_s_get_started"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>