<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.marquedo.marquedo.ui.ui_1_home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_products_categories"
        android:name="com.marquedo.marquedo.ui.ui_2_Prod_n_Cat.ProductNCategory"
        android:label="Products"
        tools:layout="@layout/ui_ui_2_fragment_products_n_category" />

    <fragment
        android:id="@+id/navigation_orders_enquiries"
        android:name="com.marquedo.marquedo.ui.ui_3_Orders_Enquiries.OrdersNEnquiry"
        android:label="Orders"
        tools:layout="@layout/ui_ui_3_order_enquiry_page" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.marquedo.marquedo.ui.ui_4_notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.marquedo.marquedo.ui.ui_5_dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />


</navigation>