<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.marquedo.marquedo.Authentication.Mobile_Login">

    <ImageButton
        android:id="@+id/business_back_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="#32FFFFFF"
        android:scaleX="2"
        android:scaleY="2"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable"
        android:contentDescription="@string/business_back_button"
        app:tint="@color/sienna_brown" />

    <!--<ImageButton
        android:id="@+id/logout"
        android:layout_width="69dp"
        android:layout_height="52dp"
        android:background="#32FFFFFF"
        android:scaleX="2"
        android:scaleY="2"
        android:tint="@color/sienna_brown"
        app:layout_constraintBottom_toTopOf="@+id/hello_there"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473"
        app:srcCompat="?attr/actionModeCloseDrawable"
        android:contentDescription="@string/logout" />-->

    <TextView
        android:id="@+id/hello_there"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hello_there"
        android:textColor="@color/sienna_brown"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_margin="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/on_boarding_textView"
        app:layout_constraintTop_toBottomOf="@id/business_back_button" />

    <TextView
        android:id="@+id/on_boarding_textView"
        android:layout_width="0dp"
        android:layout_marginHorizontal="32dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_below_details_for_successful_on_boarding"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/business_name_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@id/business_category_til"
        app:layout_constraintEnd_toEndOf="@id/hello_there"
        app:layout_constraintStart_toStartOf="@id/hello_there"
        app:layout_constraintTop_toBottomOf="@+id/on_boarding_textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/business_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/business_name"
            android:imeOptions="actionDone"
            android:inputType="textAutoComplete" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/business_category_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintEnd_toEndOf="@id/hello_there"
        app:layout_constraintStart_toStartOf="@id/hello_there"
        app:layout_constraintTop_toBottomOf="@+id/business_name_til"
        app:layout_constraintBottom_toTopOf="@id/signup_button">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/business_category_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/ic_baseline_arrow_down_24"
            android:focusableInTouchMode="false"
            android:hint="@string/business_categories"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_button"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginBottom="60dp"
        android:shadowColor="#ffffff"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/business_category_til"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/hello_there"
        app:layout_constraintStart_toStartOf="@id/hello_there" />


</androidx.constraintlayout.widget.ConstraintLayout>